@@ -1,3 +1,4 @@
+	* add new fastresume_accepted_alert
 	* fix redundant flushes of partfile metadata
 	* add option to ignore min-interval from trackers on force-reannounce
 	* raise default setting for active_limit
